--- a/Twines/08 audio.html
+++ b/Twines/08 audio.html
@@ -98,7 +98,9 @@ var saveAs=saveAs||navigator.msSaveBlob&&navigator.msSaveBlob.bind(navigator)||f
 		<div id="init-lacking">Your browser lacks required capabilities. Please upgrade it or switch to another to continue.</div>
 		<div id="init-loading"><div>Loading&hellip;</div></div>
 	</div>
-	<div id="store-area" hidden><tw-storydata name="08 audio" startnode="2" creator="Twine" creator-version="2.0.11" ifid="9CD69A03-49E8-40DD-A9C5-C6FBB3B944E0" format="SugarCube 2 (local/offline)" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="StoryInit" tags="" position="513,299">&lt;&lt;cacheaudio &quot;Train&quot; &quot;http://mikewesthad.github.io/Class-TwineMedia/Sounds/AmbientSounds/Train.wav&quot;&gt;&gt;
+	<div id="store-area" hidden><tw-storydata name="08 audio" startnode="2" creator="Twine" creator-version="2.0.11" ifid="9CD69A03-49E8-40DD-A9C5-C6FBB3B944E0" format="SugarCube 2 (local/offline)" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">
+</style><script role="script" id="twine-user-script" type="text/twine-javascript">
+</script><tw-passagedata pid="1" name="StoryInit" tags="" position="513,299">&lt;&lt;cacheaudio &quot;Train&quot; &quot;http://mikewesthad.github.io/Class-TwineMedia/Sounds/AmbientSounds/Train.wav&quot;&gt;&gt;
 
 &lt;&lt;cacheaudio &quot;Music&quot; &quot;http://mikewesthad.github.io/Class-TwineMedia/Sounds/Music/Melt.ogg&quot;&gt;&gt;
 
@@ -108,7 +110,9 @@ var saveAs=saveAs||navigator.msSaveBlob&&navigator.msSaveBlob.bind(navigator)||f
 
 &lt;&lt;cacheaudio &quot;Coin&quot; &quot;http://mikewesthad.github.io/Class-TwineMedia/Sounds/SoundEffects/Coin.wav&quot;&gt;&gt;
 
-&lt;&lt;cacheaudio &quot;Shock&quot; &quot;https://lajones911.github.io/LATwines/Sounds/ShockScream.mp3&quot;&gt;&gt;</tw-passagedata>
+&lt;&lt;cacheaudio &quot;Shock&quot; &quot;http://lajones911.github.io/LATwines/Sounds/ShockScream.mp3&quot;&gt;&gt;
+
+&lt;&lt;waitforauidio&gt;&gt;</tw-passagedata>
 <tw-passagedata pid="2" name="Begin" tags="" position="406,120">You&#39;re sitting at the train station platform next tothis guy and  his music is sooooo loud 
 
 &lt;&lt;audio &quot;Train&quot; play loop volume 1&gt;&gt;
