--- a/Twines/08 audio.html
+++ b/Twines/08 audio.html
@@ -112,7 +112,7 @@ var saveAs=saveAs||navigator.msSaveBlob&&navigator.msSaveBlob.bind(navigator)||f
 
 &lt;&lt;cacheaudio &quot;Shock&quot; &quot;http://lajones911.github.io/LATwines/Sounds/ShockScream.mp3&quot;&gt;&gt;
 
-&lt;&lt;waitforauidio&gt;&gt;</tw-passagedata>
+&lt;&lt;waitforaudio&gt;&gt;</tw-passagedata>
 <tw-passagedata pid="2" name="Begin" tags="" position="406,120">You&#39;re sitting at the train station platform next tothis guy and  his music is sooooo loud 
 
 &lt;&lt;audio &quot;Train&quot; play loop volume 1&gt;&gt;
