--- a/Twines/newAanimation.html
+++ b/Twines/newAanimation.html
@@ -373,11 +373,11 @@ Do you choose to accept this mission?
 	&lt;&lt;goto &quot;Start&quot;&gt;&gt;
 &lt;&lt;/timed&gt;&gt;
 		
-</tw-passagedata><tw-passagedata pid="4" name="boom" tags="" position="302,499"> &lt;div class=&quot;animated fadeOut&quot; style=&quot;animation-delay: 1s;animation-duration: 2s;&quot;&gt;You have failed....&lt;/div&gt;
+</tw-passagedata><tw-passagedata pid="4" name="boom" tags="" position="303,499"> &lt;div class=&quot;animated fadeOut&quot; style=&quot;animation-delay: 1s;animation-duration: 3s;&quot;&gt;You have failed....&lt;/div&gt;
 
 
-&lt;&lt;audio &quot;count&quot; fadeoverto 0.5s 0&gt;&gt;
-&lt;&lt;audio &quot;Missle&quot; fadeoverto 0.3s 1&gt;&gt;
+&lt;&lt;audio &quot;count&quot; stop&gt;&gt;
+&lt;&lt;audio &quot;Missle&quot; play volume 1&gt;&gt;
 ​
 [[Try Again-&gt;Start]]</tw-passagedata><tw-passagedata pid="5" name="Hack" tags="single-background" position="576,491">
 Hmm.. You have to solve a riddle to get the password....
